reservation and details reservation and detail_reservation_option_hotel fixed, need to make pric correct using dates and other fixes needed